Attempt to fix broken anchor tags on mobile.

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -82,6 +82,7 @@ h3 {
 
 a {
   color: var(--accent);
+  word-break: break-all;
 }
 
 .nav-links a {
